# feihua

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  requirements.txt
feihua/: client.py  exceptions.py  recordset.py  signer.py  utils.py
feijoa/: client.py  exceptions.py  recordset.py  signer.py  utils.py
tests/: conftest.py  identical.py
tests/api/: conftest.py  test_recordsets.py
tests/data/: api_recordsets_data.json  function_recordsets_data.json
tests/function/: conftest.py  test_client.py  test_recordsets.py  test_singer.py  test_utils.py
